syntax = "proto3";
package comdex.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/auction/v1beta1/params.proto";
import "comdex/auction/v1beta1/auction.proto";
import "comdex/auction/v1beta1/biddings.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/comdex-official/comdex/x/auction/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message QuerySurplusAuctionRequest {
  uint64 id = 1;
}

message QuerySurplusAuctionResponse {
  SurplusAuction auction = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\"" ];
}

message QuerySurplusAuctionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QuerySurplusAuctionsResponse {
  repeated SurplusAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QuerySurplusBiddingsRequest {
  string bidder = 1;
}

message QuerySurplusBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated Biddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
}


message QueryDebtAuctionRequest {
  uint64 id = 1;
}

message QueryDebtAuctionResponse {
  DebtAuction auction = 1
  [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\"" ];
}

message QueryDebtAuctionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryDebtAuctionsResponse {
  repeated DebtAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryDebtBiddingsRequest {
  string bidder = 1;
}

message QueryDebtBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated Biddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
}



message QueryDutchAuctionRequest {
  uint64 id = 1;
}

message QueryDutchAuctionResponse {
  DutchAuction auction = 1
  [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\"" ];
}

message QueryDutchAuctionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
  [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryDutchAuctionsResponse {
  repeated DutchAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryDutchBiddingsRequest {
  string bidder = 1;
}

message QueryDutchBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated DutchBiddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
}


message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

service QueryService {
  rpc QuerySurplusAuction(QuerySurplusAuctionRequest) returns (QuerySurplusAuctionResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/surplusauction/{id}";
  }
  rpc QuerySurplusAuctions(QuerySurplusAuctionsRequest) returns (QuerySurplusAuctionsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/surplusauctions";
  }
  rpc QuerySurplusBiddings(QuerySurplusBiddingsRequest) returns (QuerySurplusBiddingsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/surplusbiddings/{bidder}";
  }
  rpc QueryDebtAuction(QueryDebtAuctionRequest) returns (QueryDebtAuctionResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/debtauction/{id}";
  }
  rpc QueryDebtAuctions(QueryDebtAuctionsRequest) returns (QueryDebtAuctionsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/debtauctions";
  }
  rpc QueryDebtBiddings(QueryDebtBiddingsRequest) returns (QueryDebtBiddingsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/debtbiddings/{bidder}";
  }
  rpc QueryDutchAuction(QueryDutchAuctionRequest) returns (QueryDutchAuctionResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/dutchauction/{id}";
  }
  rpc QueryDutchAuctions(QueryDutchAuctionsRequest) returns (QueryDutchAuctionsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/dutchauctions";
  }
  rpc QueryDutchBiddings(QueryDutchBiddingsRequest) returns (QueryDutchBiddingsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/dutchbiddings/{bidder}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
      option (google.api.http).get = "/comdex/auction/v1beta1/params";
  }
}
